--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
  <head>
   <meta charset="utf-8">
   <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@700&family=Roboto:wght@500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="fonts.css">
   <link rel="stylesheet" href="styles.css">
  </head>
  <body>
   <div class="wrapper">
      <header class="header">
-          <div class="logo">app.creation</div>
+          <div class="logo"></div>
           <nav class="menu">
-            <a class="menu__item">start</a>
-            <a class="menu__item">services</a>
-            <a class="menu__item">about</a>
-            <a class="menu__item">blog</a>
-            <a class="menu__item">contact us</a>
+            <a class="menu__item" href="#">start</a>
+            <a class="menu__item" href="#">services</a>
+            <a class="menu__item" href="#">about</a>
+            <a class="menu__item" href="#">blog</a>
+            <a class="menu__item" href="#">contact us</a>
           </nav>
      </header>
      <section class="main-section">
