--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
  <body>
   <div class="wrapper">
      <header class="header">
-          <div class="logo"></div>
+          <div class="logo">
+            <div class="logo__ellipse logo__ellipse_color_dark-blue"></div>
+            <div class="logo__ellipse logo__ellipse_color_blue"></div>
+            app.creation</div>
           <nav class="menu">
             <a class="menu__item" href="#">start</a>
             <a class="menu__item" href="#">services</a>
