--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <meta charset="utf-8">
-  <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@700&family=Roboto:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="fonts.css">
   <link rel="stylesheet" href="styles.css">
  </head>
@@ -15,7 +15,7 @@
             app.creation</div>
           <nav class="menu">
             <a class="menu__item" href="#">start</a>
-            <a class="menu__item" href="#">services</a>
+            <a class="menu__item menu__item_active" href="#">services</a>
             <a class="menu__item" href="#">about</a>
             <a class="menu__item" href="#">blog</a>
             <a class="menu__item" href="#">contact us</a>
