--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
           <div class="logo">
             <div class="logo__ellipse logo__ellipse_color_dark-blue"></div>
             <div class="logo__ellipse logo__ellipse_color_blue"></div>
-            app.creation</div>
+            app.creation
+          </div>
           <nav class="menu">
             <a class="menu__item" href="#">start</a>
             <a class="menu__item menu__item_active" href="#">services</a>
@@ -23,16 +24,15 @@
      </header>
      <section class="main">
             <h1 class="main__title">
-              Building an App
-              <span class="main__title-text_highlight">
-                Without Design Expertise?
-              </span>
+              Building an App <span class="main__title-text_highlight">Without Design Expertise</span>?
             </h1>
             <p class="main__description">I help tech startups design better digital products without hiring a full-time designer</p>
             <a class="main__button" href="#">
               Schedule free consultation
             </a>
+
      </section>
+     <div class="end"></div>
   <div>
  </body>
 </html>
